<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".UpdateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:gravity="center_horizontal"
        android:text="@string/update_donation_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_delete_icon"
        app:layout_constraintStart_toStartOf="@+id/fullName_input_update" />

    <EditText
        android:id="@+id/fullName_input_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_form_field_border"
        android:ems="10"
        android:hint="@string/full_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/studentID_input_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_form_field_border"
        android:ems="10"
        android:hint="@string/student_id_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName_input_update" />

    <EditText
        android:id="@+id/bookTitle_input_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_form_field_border"
        android:ems="10"
        android:hint="@string/book_title_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentID_input_update" />

    <EditText
        android:id="@+id/bookAuthor_input_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_form_field_border"
        android:ems="10"
        android:hint="@string/author_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle_input_update" />

    <EditText
        android:id="@+id/numOfBooks_input_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_form_field_border"
        android:ems="10"
        android:hint="@string/number_of_books_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor_input_update" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_btn_border"
        android:text="@string/update_button_txt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfBooks_input_update" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:drawableRight="@drawable/ic_delete"
        android:text=""
        android:textAllCaps="false"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button" />

    <TextView
        android:id="@+id/txt_delete_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/delete_btn_background"
        android:drawableRight="@drawable/ic_delete"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/fullName_input_update"
        app:layout_constraintEnd_toEndOf="@+id/fullName_input_update" />

</androidx.constraintlayout.widget.ConstraintLayout>