<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk_bg"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_form_field_border"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_form_field_border"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/editText_conf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_form_field_border"
                android:ems="10"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_btn_border"
                android:text="@string/register_btn_txt"
                android:textColor="#FFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_already_registered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_registered_link_txt"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/login_link_txt"
                    android:textColor="#2196F3"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>